images in content are display:block to prevent weird wrapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,6 +187,10 @@ body.logged-out {
   margin-bottom: 8px;
 }
 
+.entry .content img {
+  display: block;
+}
+
 .entry .meta {
   text-decoration: none;  
   color: #999;
